--- a/jike1-24/package.json
+++ b/jike1-24/package.json
@@ -12,7 +12,7 @@
   "keywords": [
     "TypeScript"
   ],
-  "author": "liangxiao",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.5.5",
